--- a/dsan-website/5000-website/info/decision_trees.qmd
+++ b/dsan-website/5000-website/info/decision_trees.qmd
@@ -1,5 +1,15 @@
 ---
-title: "Decision Trees"
+title: Your Document Title
+output:
+  quarto::quarto_html_document:
+    includes:
+      in_header: theme.css
 ---
 
-Build out your website tab for "clustering"
+# Welcome to Your Document
+
+```{html}
+<video id="background-video" autoplay loop muted>
+    <source src="images/video1.mp4" type="video1/mp4">
+    Your browser does not support the video tag.
+</video>
