changes have been made

--- a/dsan-website/5000-website/codes/countries_code/brazil.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/brazil.ipynb
@@ -7142,8 +7142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file='../data/brazil.csv'\n",
-    "df.to_csv(csv_file, index=False)"
+    "#csv_file='../data/brazil.csv'\n",
+    "#df.to_csv(csv_file, index=False)"
    ]
   },
   {
