--- a/dsan-website/5000-website/codes/countries_code/china.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/china.ipynb
@@ -5561,26 +5561,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file='../data/china.csv'"
+    "#csv_file='../data/china.csv'\n",
+    "#df.to_csv(csv_file, index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "ea344c0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(csv_file, index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27b44726",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
