--- a/dsan-website/5000-website/codes/countries_code/southafrica.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/southafrica.ipynb
@@ -7142,26 +7142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file='../data/southafrica.csv'"
+    "#csv_file='../data/southafrica.csv'\n",
+    "#df.to_csv(csv_file, index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "ea344c0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(csv_file, index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5df2ced",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
