--- a/dsan-website/5000-website/codes/countries_code/india.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/india.ipynb
@@ -4067,7 +4067,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file='../data/india.csv'"
+    "#csv_file='../data/india.csv'\n",
+    "#df.to_csv(csv_file, index=True)"
    ]
   },
   {
@@ -4076,9 +4077,7 @@
    "id": "fba935c9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_csv(csv_file, index=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
