--- a/dsan-website/5000-website/codes/countries_code/russia.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/russia.ipynb
@@ -4986,17 +4986,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file='../data/russia.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "ea344c0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(csv_file, index=True)"
+    "#csv_file='../data/russia.csv'\n",
+    "#df.to_csv(csv_file, index=True)"
    ]
   }
  ],
