changes have been made

--- a/dsan-website/5000-website/codes/countries_code/india.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/india.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "#pip install xlrd\n",
-    "df=pd.read_excel('../data/india.xlsx')"
+    "df=pd.read_excel('../../data/excel_files/india.xlsx')"
    ]
   },
   {
