--- a/dsan-website/5000-website/codes/countries_code/russia.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/russia.ipynb
@@ -1046,7 +1046,7 @@
    ],
    "source": [
     "#pip install xlrd\n",
-    "df=pd.read_excel('../data/russia.xlsx')\n",
+    "df=pd.read_excel('../../data/excel_files/russia.xlsx')\n",
     "df"
    ]
   },
