--- a/dsan-website/5000-website/codes/countries_code/southafrica.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/southafrica.ipynb
@@ -1081,7 +1081,7 @@
    ],
    "source": [
     "#pip install xlrd\n",
-    "df=pd.read_excel('../data/southafrica.xlsx')\n",
+    "df=pd.read_excel('../../data/excel_files/southafrica.xlsx')\n",
     "df"
    ]
   },
