--- a/dsan-website/5000-website/codes/countries_code/brazil.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/brazil.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "cc58bd62",
    "metadata": {},
    "outputs": [
@@ -1074,14 +1074,15 @@
        "[33 rows x 54 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#pip install xlrd\n",
-    "df=pd.read_excel('../data/brazil.xlsx')\n",
+    "df=pd.read_excel('../../data/excel_files/brazil.xlsx')\n",
+    "\n",
     "df"
    ]
   },
@@ -7171,7 +7172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
