--- a/dsan-website/5000-website/codes/countries_code/china.ipynb
+++ b/dsan-website/5000-website/codes/countries_code/china.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "6aaebfa4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "cc58bd62",
    "metadata": {},
    "outputs": [
@@ -1109,14 +1109,14 @@
        "[33 rows x 38 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#pip install xlrd\n",
-    "df=pd.read_excel('../data/china.xlsx')\n",
+    "df=pd.read_excel('../../data/excel_files/china.xlsx')\n",
     "df"
    ]
   },
@@ -5582,7 +5582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
