--- a/dsan-website/5000-website/codes/working_code/wbstats.ipynb
+++ b/dsan-website/5000-website/codes/working_code/wbstats.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -137,7 +137,8 @@
     "merged_df <- full_join(merged_df, data6, by = \"date\")\n",
     "merged_df <- full_join(merged_df, data7, by = \"date\")\n",
     "merged_df <- full_join(merged_df, data8, by = \"date\")\n",
-    "merged_df <- full_join(merged_df, data9, by = \"date\")"
+    "merged_df <- full_join(merged_df, data9, by = \"date\")\n",
+    "\n"
    ]
   },
   {
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -314,56 +315,56 @@
      "output_type": "stream",
      "text": [
       "           date FDI Current Exp GDP Per Capita Growth\n",
-      "1973 1973-11-03     7.41000e+09            4.64215574\n",
-      "1974 1974-11-03     1.62000e+09           -1.44513434\n",
-      "1975 1975-11-03     1.14200e+10           -1.18458141\n",
-      "1976 1976-11-03     8.41000e+09            4.39146287\n",
-      "1977 1977-11-03     8.36000e+09            3.57714671\n",
-      "1978 1978-11-03     8.87000e+09            4.42298461\n",
-      "1979 1979-11-03     1.66700e+10            2.03388706\n",
-      "1980 1980-11-03     2.30000e+09           -1.20929826\n",
-      "1981 1981-11-03    -1.55700e+10            1.53632028\n",
-      "1982 1982-11-03    -1.34560e+10           -2.73456973\n",
-      "1983 1983-11-03    -2.73000e+09            3.63197930\n",
-      "1984 1984-11-03    -1.24100e+10            6.31216766\n",
-      "1985 1985-11-03    -5.95000e+09            3.25065642\n",
-      "1986 1986-11-03    -1.14220e+10            2.51088597\n",
-      "1987 1987-11-03    -2.34380e+10            2.53862354\n",
-      "1988 1988-11-03    -3.52090e+10            3.23541611\n",
-      "1989 1989-11-03    -2.48000e+10            2.69816667\n",
-      "1990 1990-11-03    -1.12900e+10            0.74148610\n",
-      "1991 1991-11-03     1.47200e+10           -1.43420013\n",
-      "1992 1992-11-03     2.84600e+10            2.09661277\n",
-      "1993 1993-11-03     3.25700e+10            1.40570857\n",
-      "1994 1994-11-03     3.40500e+10            2.76088230\n",
-      "1995 1995-11-03     4.09800e+10            1.46871823\n",
-      "1996 1996-11-03     5.36000e+09            2.57225920\n",
-      "1997 1997-11-03    -7.70000e+08            3.19721205\n",
-      "1998 1998-11-03    -3.63900e+10            3.27051107\n",
-      "1999 1999-11-03    -6.49640e+10            3.59798502\n",
-      "2000 2000-11-03    -1.62755e+11            2.92544098\n",
-      "2001 2001-11-03    -2.64550e+10           -0.03991973\n",
-      "2002 2002-11-03     6.79300e+10            0.75677405\n",
-      "2003 2003-11-03     7.81120e+10            1.91648045\n",
-      "2004 2004-11-03     1.60363e+11            2.89584778\n",
-      "2005 2005-11-03    -8.97530e+10            2.53378411\n",
-      "2006 2006-11-03    -1.46620e+10            1.79648633\n",
-      "2007 2007-11-03     1.77277e+11            1.04493014\n",
-      "2008 2008-11-03     2.49100e+09           -0.82036790\n",
-      "2009 2009-11-03     1.51514e+11           -3.45001592\n",
-      "2010 2010-11-03     8.57890e+10            1.86029168\n",
-      "2011 2011-11-03     1.73119e+11            0.81451936\n",
-      "2012 2012-11-03     1.26895e+11            1.53310204\n",
-      "2013 2013-11-03     1.04665e+11            1.13869235\n",
-      "2014 2014-11-03     1.35673e+11            1.54038065\n",
-      "2015 2015-11-03    -2.09363e+11            1.95300412\n",
-      "2016 2016-11-03    -1.74573e+11            0.93337536\n",
-      "2017 2017-11-03     2.85900e+10            1.59713559\n",
-      "2018 2018-11-03    -3.45435e+11            2.40486787\n",
-      "2019 2019-11-03    -2.01057e+11            1.82966839\n",
-      "2020 2020-11-03     1.48299e+11           -3.70095253\n",
-      "2021 2021-11-03    -9.90150e+10            5.77954842\n",
-      "2022 2022-11-03     3.81730e+10            1.67697130\n",
+      "1973 1973-12-05     7.41000e+09            4.64215574\n",
+      "1974 1974-12-05     1.62000e+09           -1.44513434\n",
+      "1975 1975-12-05     1.14200e+10           -1.18458141\n",
+      "1976 1976-12-05     8.41000e+09            4.39146287\n",
+      "1977 1977-12-05     8.36000e+09            3.57714671\n",
+      "1978 1978-12-05     8.87000e+09            4.42298461\n",
+      "1979 1979-12-05     1.66700e+10            2.03388706\n",
+      "1980 1980-12-05     2.30000e+09           -1.20929826\n",
+      "1981 1981-12-05    -1.55700e+10            1.53632028\n",
+      "1982 1982-12-05    -1.34560e+10           -2.73456973\n",
+      "1983 1983-12-05    -2.73000e+09            3.63197930\n",
+      "1984 1984-12-05    -1.24100e+10            6.31216766\n",
+      "1985 1985-12-05    -5.95000e+09            3.25065642\n",
+      "1986 1986-12-05    -1.14220e+10            2.51088597\n",
+      "1987 1987-12-05    -2.34380e+10            2.53862354\n",
+      "1988 1988-12-05    -3.52090e+10            3.23541611\n",
+      "1989 1989-12-05    -2.48000e+10            2.69816667\n",
+      "1990 1990-12-05    -1.12900e+10            0.74148610\n",
+      "1991 1991-12-05     1.47200e+10           -1.43420013\n",
+      "1992 1992-12-05     2.84600e+10            2.09661277\n",
+      "1993 1993-12-05     3.25700e+10            1.40570857\n",
+      "1994 1994-12-05     3.40500e+10            2.76088230\n",
+      "1995 1995-12-05     4.09800e+10            1.46871823\n",
+      "1996 1996-12-05     5.36000e+09            2.57225920\n",
+      "1997 1997-12-05    -7.70000e+08            3.19721205\n",
+      "1998 1998-12-05    -3.63900e+10            3.27051107\n",
+      "1999 1999-12-05    -6.49640e+10            3.59798502\n",
+      "2000 2000-12-05    -1.62755e+11            2.92544098\n",
+      "2001 2001-12-05    -2.64550e+10           -0.03991973\n",
+      "2002 2002-12-05     6.79300e+10            0.75677405\n",
+      "2003 2003-12-05     7.81120e+10            1.91648045\n",
+      "2004 2004-12-05     1.60363e+11            2.89584778\n",
+      "2005 2005-12-05    -8.97530e+10            2.53378411\n",
+      "2006 2006-12-05    -1.46620e+10            1.79648633\n",
+      "2007 2007-12-05     1.77277e+11            1.04493014\n",
+      "2008 2008-12-05     2.49100e+09           -0.82036790\n",
+      "2009 2009-12-05     1.51514e+11           -3.45001592\n",
+      "2010 2010-12-05     8.57890e+10            1.86029168\n",
+      "2011 2011-12-05     1.73119e+11            0.81451936\n",
+      "2012 2012-12-05     1.26895e+11            1.53310204\n",
+      "2013 2013-12-05     1.04665e+11            1.13869235\n",
+      "2014 2014-12-05     1.35673e+11            1.54038065\n",
+      "2015 2015-12-05    -2.09363e+11            1.95300412\n",
+      "2016 2016-12-05    -1.74573e+11            0.93337536\n",
+      "2017 2017-12-05     2.85900e+10            1.59713559\n",
+      "2018 2018-12-05    -3.45435e+11            2.40486787\n",
+      "2019 2019-12-05    -2.01057e+11            1.82966839\n",
+      "2020 2020-12-05     1.48299e+11           -3.70095253\n",
+      "2021 2021-12-05    -9.90150e+10            5.77954842\n",
+      "2022 2022-12-05     3.81730e+10            1.67697130\n",
       "     Government Final Consumption Expenditure Imports of Goods and Services\n",
       "1973                                 16.77628                      6.683780\n",
       "1974                                 17.16267                      8.196122\n",
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -547,12 +548,12 @@
        "\t<tr><th></th><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1973</th><td>1973-11-03</td><td>7.410e+09</td><td> 4.642156</td><td>16.77628</td><td>6.683780</td><td> 6.177760</td><td> 2.4097353</td><td>69.31363</td><td>5.837531</td><td>5.893871</td></tr>\n",
-       "\t<tr><th scope=row>1974</th><td>1974-11-03</td><td>1.620e+09</td><td>-1.445134</td><td>17.16267</td><td>8.196122</td><td>11.054805</td><td> 1.6510645</td><td>69.31363</td><td>5.837531</td><td>5.954111</td></tr>\n",
-       "\t<tr><th scope=row>1975</th><td>1975-11-03</td><td>1.142e+10</td><td>-1.184581</td><td>17.61080</td><td>8.232279</td><td> 9.143147</td><td>-1.2814192</td><td>69.31363</td><td>5.837531</td><td>5.622679</td></tr>\n",
-       "\t<tr><th scope=row>1976</th><td>1976-11-03</td><td>8.410e+09</td><td> 4.391463</td><td>16.78798</td><td>7.980893</td><td> 5.744813</td><td> 1.2668917</td><td>69.31363</td><td>5.837531</td><td>5.191071</td></tr>\n",
-       "\t<tr><th scope=row>1977</th><td>1977-11-03</td><td>8.360e+09</td><td> 3.577147</td><td>16.38797</td><td>7.654290</td><td> 6.501684</td><td> 0.5750689</td><td>69.31363</td><td>5.837531</td><td>5.155617</td></tr>\n",
-       "\t<tr><th scope=row>1978</th><td>1978-11-03</td><td>8.870e+09</td><td> 4.422985</td><td>15.76672</td><td>7.947061</td><td> 7.630964</td><td> 1.8899033</td><td>69.31363</td><td>5.837531</td><td>4.943087</td></tr>\n",
+       "\t<tr><th scope=row>1973</th><td>1973-12-05</td><td>7.410e+09</td><td> 4.642156</td><td>16.77628</td><td>6.683780</td><td> 6.177760</td><td> 2.4097353</td><td>69.31363</td><td>5.837531</td><td>5.893871</td></tr>\n",
+       "\t<tr><th scope=row>1974</th><td>1974-12-05</td><td>1.620e+09</td><td>-1.445134</td><td>17.16267</td><td>8.196122</td><td>11.054805</td><td> 1.6510645</td><td>69.31363</td><td>5.837531</td><td>5.954111</td></tr>\n",
+       "\t<tr><th scope=row>1975</th><td>1975-12-05</td><td>1.142e+10</td><td>-1.184581</td><td>17.61080</td><td>8.232279</td><td> 9.143147</td><td>-1.2814192</td><td>69.31363</td><td>5.837531</td><td>5.622679</td></tr>\n",
+       "\t<tr><th scope=row>1976</th><td>1976-12-05</td><td>8.410e+09</td><td> 4.391463</td><td>16.78798</td><td>7.980893</td><td> 5.744813</td><td> 1.2668917</td><td>69.31363</td><td>5.837531</td><td>5.191071</td></tr>\n",
+       "\t<tr><th scope=row>1977</th><td>1977-12-05</td><td>8.360e+09</td><td> 3.577147</td><td>16.38797</td><td>7.654290</td><td> 6.501684</td><td> 0.5750689</td><td>69.31363</td><td>5.837531</td><td>5.155617</td></tr>\n",
+       "\t<tr><th scope=row>1978</th><td>1978-12-05</td><td>8.870e+09</td><td> 4.422985</td><td>15.76672</td><td>7.947061</td><td> 7.630964</td><td> 1.8899033</td><td>69.31363</td><td>5.837531</td><td>4.943087</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -562,12 +563,12 @@
        "  & date & FDI Current Exp & GDP Per Capita Growth & Government Final Consumption Expenditure & Imports of Goods and Services & Inflation (Consumer Prices) & Real Interest Rate & Central Government Debt & Unemployement & Military Expenditure\\\\\n",
        "  & <date> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t1973 & 1973-11-03 & 7.410e+09 &  4.642156 & 16.77628 & 6.683780 &  6.177760 &  2.4097353 & 69.31363 & 5.837531 & 5.893871\\\\\n",
-       "\t1974 & 1974-11-03 & 1.620e+09 & -1.445134 & 17.16267 & 8.196122 & 11.054805 &  1.6510645 & 69.31363 & 5.837531 & 5.954111\\\\\n",
-       "\t1975 & 1975-11-03 & 1.142e+10 & -1.184581 & 17.61080 & 8.232279 &  9.143147 & -1.2814192 & 69.31363 & 5.837531 & 5.622679\\\\\n",
-       "\t1976 & 1976-11-03 & 8.410e+09 &  4.391463 & 16.78798 & 7.980893 &  5.744813 &  1.2668917 & 69.31363 & 5.837531 & 5.191071\\\\\n",
-       "\t1977 & 1977-11-03 & 8.360e+09 &  3.577147 & 16.38797 & 7.654290 &  6.501684 &  0.5750689 & 69.31363 & 5.837531 & 5.155617\\\\\n",
-       "\t1978 & 1978-11-03 & 8.870e+09 &  4.422985 & 15.76672 & 7.947061 &  7.630964 &  1.8899033 & 69.31363 & 5.837531 & 4.943087\\\\\n",
+       "\t1973 & 1973-12-05 & 7.410e+09 &  4.642156 & 16.77628 & 6.683780 &  6.177760 &  2.4097353 & 69.31363 & 5.837531 & 5.893871\\\\\n",
+       "\t1974 & 1974-12-05 & 1.620e+09 & -1.445134 & 17.16267 & 8.196122 & 11.054805 &  1.6510645 & 69.31363 & 5.837531 & 5.954111\\\\\n",
+       "\t1975 & 1975-12-05 & 1.142e+10 & -1.184581 & 17.61080 & 8.232279 &  9.143147 & -1.2814192 & 69.31363 & 5.837531 & 5.622679\\\\\n",
+       "\t1976 & 1976-12-05 & 8.410e+09 &  4.391463 & 16.78798 & 7.980893 &  5.744813 &  1.2668917 & 69.31363 & 5.837531 & 5.191071\\\\\n",
+       "\t1977 & 1977-12-05 & 8.360e+09 &  3.577147 & 16.38797 & 7.654290 &  6.501684 &  0.5750689 & 69.31363 & 5.837531 & 5.155617\\\\\n",
+       "\t1978 & 1978-12-05 & 8.870e+09 &  4.422985 & 15.76672 & 7.947061 &  7.630964 &  1.8899033 & 69.31363 & 5.837531 & 4.943087\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -576,22 +577,22 @@
        "\n",
        "| <!--/--> | date &lt;date&gt; | FDI Current Exp &lt;dbl&gt; | GDP Per Capita Growth &lt;dbl&gt; | Government Final Consumption Expenditure &lt;dbl&gt; | Imports of Goods and Services &lt;dbl&gt; | Inflation (Consumer Prices) &lt;dbl&gt; | Real Interest Rate &lt;dbl&gt; | Central Government Debt &lt;dbl&gt; | Unemployement &lt;dbl&gt; | Military Expenditure &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1973 | 1973-11-03 | 7.410e+09 |  4.642156 | 16.77628 | 6.683780 |  6.177760 |  2.4097353 | 69.31363 | 5.837531 | 5.893871 |\n",
-       "| 1974 | 1974-11-03 | 1.620e+09 | -1.445134 | 17.16267 | 8.196122 | 11.054805 |  1.6510645 | 69.31363 | 5.837531 | 5.954111 |\n",
-       "| 1975 | 1975-11-03 | 1.142e+10 | -1.184581 | 17.61080 | 8.232279 |  9.143147 | -1.2814192 | 69.31363 | 5.837531 | 5.622679 |\n",
-       "| 1976 | 1976-11-03 | 8.410e+09 |  4.391463 | 16.78798 | 7.980893 |  5.744813 |  1.2668917 | 69.31363 | 5.837531 | 5.191071 |\n",
-       "| 1977 | 1977-11-03 | 8.360e+09 |  3.577147 | 16.38797 | 7.654290 |  6.501684 |  0.5750689 | 69.31363 | 5.837531 | 5.155617 |\n",
-       "| 1978 | 1978-11-03 | 8.870e+09 |  4.422985 | 15.76672 | 7.947061 |  7.630964 |  1.8899033 | 69.31363 | 5.837531 | 4.943087 |\n",
+       "| 1973 | 1973-12-05 | 7.410e+09 |  4.642156 | 16.77628 | 6.683780 |  6.177760 |  2.4097353 | 69.31363 | 5.837531 | 5.893871 |\n",
+       "| 1974 | 1974-12-05 | 1.620e+09 | -1.445134 | 17.16267 | 8.196122 | 11.054805 |  1.6510645 | 69.31363 | 5.837531 | 5.954111 |\n",
+       "| 1975 | 1975-12-05 | 1.142e+10 | -1.184581 | 17.61080 | 8.232279 |  9.143147 | -1.2814192 | 69.31363 | 5.837531 | 5.622679 |\n",
+       "| 1976 | 1976-12-05 | 8.410e+09 |  4.391463 | 16.78798 | 7.980893 |  5.744813 |  1.2668917 | 69.31363 | 5.837531 | 5.191071 |\n",
+       "| 1977 | 1977-12-05 | 8.360e+09 |  3.577147 | 16.38797 | 7.654290 |  6.501684 |  0.5750689 | 69.31363 | 5.837531 | 5.155617 |\n",
+       "| 1978 | 1978-12-05 | 8.870e+09 |  4.422985 | 15.76672 | 7.947061 |  7.630964 |  1.8899033 | 69.31363 | 5.837531 | 4.943087 |\n",
        "\n"
       ],
       "text/plain": [
        "     date       FDI Current Exp GDP Per Capita Growth\n",
-       "1973 1973-11-03 7.410e+09        4.642156            \n",
-       "1974 1974-11-03 1.620e+09       -1.445134            \n",
-       "1975 1975-11-03 1.142e+10       -1.184581            \n",
-       "1976 1976-11-03 8.410e+09        4.391463            \n",
-       "1977 1977-11-03 8.360e+09        3.577147            \n",
-       "1978 1978-11-03 8.870e+09        4.422985            \n",
+       "1973 1973-12-05 7.410e+09        4.642156            \n",
+       "1974 1974-12-05 1.620e+09       -1.445134            \n",
+       "1975 1975-12-05 1.142e+10       -1.184581            \n",
+       "1976 1976-12-05 8.410e+09        4.391463            \n",
+       "1977 1977-12-05 8.360e+09        3.577147            \n",
+       "1978 1978-12-05 8.870e+09        4.422985            \n",
        "     Government Final Consumption Expenditure Imports of Goods and Services\n",
        "1973 16.77628                                 6.683780                     \n",
        "1974 17.16267                                 8.196122                     \n",
