changes have been made

--- a/dsan-website/5000-website/codes/data_cleaning_record.ipynb
+++ b/dsan-website/5000-website/codes/data_cleaning_record.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[10 rows x 48 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
        "(43, 33)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,301 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Market-based economies now days are centred on steady growth. A collection of interconnected production and consuming activities that decide how scarce resources are distributed is called an economy. These limited resources are distributed within a market system in market-based economies, where supply and demand dictate how resources are allocated. \n",
+    "\n",
+    "The BRICS countries have seen a great deal of economic growth over the last few decades. China, in particular, has rapidly industrialised and grown to be the second-largest economy in the world. India has also played a significant role in this growth. These countries have diverse economies with interconnected production and consumption activities. As a group, they have significant influence on the global stage. Their trade policies, economic activities, and strategic decisions have an impact not only on their individual economies but also on the global economy as a whole. For this reason, GDP growth rate is essential in gauging the overall performance of the economy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to various sources, the ideal growth rate for a developed economy is around 2-3% but again, for developing country, no literature has shown be a well-performing percentage for good growth rate or moderate growth rate. However, GDP though can be a good indicator for economic performance, focusing on other parameters of education, health, gender and sustained-demand have contribute for the better performance as an economy. Yet, keeping in mind the metrics seen for developed economies, the labels have been created accordingly. With 0-2% as Low Growth, 2-5% as Moderate Growth, 5-7% as 'High Growth' looking into the average growth rates of developing economies that are performing well and 7 and above is shown as 'Very High Growth'. This is user-defined for the purposes of predictive modelling. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adj_NNI_g</th>\n",
+       "      <th>adj_NNI_c</th>\n",
+       "      <th>adj_savings_fix_cap_GNI</th>\n",
+       "      <th>adj_savings_edu_GNI</th>\n",
+       "      <th>adj_NNS_GNI</th>\n",
+       "      <th>curr_acc_bal</th>\n",
+       "      <th>ex_imp_gdp</th>\n",
+       "      <th>ex_imp_growth</th>\n",
+       "      <th>ex_debt_shocks</th>\n",
+       "      <th>final_consump_exp_gdp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>inflation</th>\n",
+       "      <th>real_interest_rate</th>\n",
+       "      <th>lending_interest_rate</th>\n",
+       "      <th>life_exp_birth</th>\n",
+       "      <th>expense_gdp</th>\n",
+       "      <th>interest_payments</th>\n",
+       "      <th>military expenditure</th>\n",
+       "      <th>year</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1979</th>\n",
+       "      <td>11.978544</td>\n",
+       "      <td>2.476830e+11</td>\n",
+       "      <td>8.055168</td>\n",
+       "      <td>2.600000</td>\n",
+       "      <td>6.418183</td>\n",
+       "      <td>-0.958069</td>\n",
+       "      <td>6.139551</td>\n",
+       "      <td>5.237330</td>\n",
+       "      <td>11.096107</td>\n",
+       "      <td>87.498021</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.737409</td>\n",
+       "      <td>11.346073</td>\n",
+       "      <td>4.476508</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>53.611</td>\n",
+       "      <td>11.702478</td>\n",
+       "      <td>13.780033</td>\n",
+       "      <td>3.133781</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>High Growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>-2.572689</td>\n",
+       "      <td>2.413109e+11</td>\n",
+       "      <td>8.393346</td>\n",
+       "      <td>2.600000</td>\n",
+       "      <td>7.373027</td>\n",
+       "      <td>-1.394549</td>\n",
+       "      <td>5.936027</td>\n",
+       "      <td>-0.816934</td>\n",
+       "      <td>11.615484</td>\n",
+       "      <td>85.768606</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.014232</td>\n",
+       "      <td>13.112547</td>\n",
+       "      <td>5.118237</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>54.175</td>\n",
+       "      <td>11.376034</td>\n",
+       "      <td>14.073244</td>\n",
+       "      <td>3.186248</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>High Growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1981</th>\n",
+       "      <td>1.626264</td>\n",
+       "      <td>2.452352e+11</td>\n",
+       "      <td>8.819348</td>\n",
+       "      <td>3.051058</td>\n",
+       "      <td>7.043158</td>\n",
+       "      <td>-1.257273</td>\n",
+       "      <td>5.983300</td>\n",
+       "      <td>6.020508</td>\n",
+       "      <td>13.467614</td>\n",
+       "      <td>85.319441</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.883336</td>\n",
+       "      <td>7.890743</td>\n",
+       "      <td>7.774707</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>54.732</td>\n",
+       "      <td>11.959873</td>\n",
+       "      <td>15.563031</td>\n",
+       "      <td>3.345118</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>Moderate Growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982</th>\n",
+       "      <td>11.562099</td>\n",
+       "      <td>2.735896e+11</td>\n",
+       "      <td>8.419293</td>\n",
+       "      <td>3.153437</td>\n",
+       "      <td>7.024774</td>\n",
+       "      <td>-0.887438</td>\n",
+       "      <td>5.837629</td>\n",
+       "      <td>-0.914918</td>\n",
+       "      <td>14.101651</td>\n",
+       "      <td>85.635851</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.293660</td>\n",
+       "      <td>11.868081</td>\n",
+       "      <td>7.320987</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>55.281</td>\n",
+       "      <td>12.077793</td>\n",
+       "      <td>17.460567</td>\n",
+       "      <td>3.323069</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>Very High Growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983</th>\n",
+       "      <td>1.851968</td>\n",
+       "      <td>2.786564e+11</td>\n",
+       "      <td>8.784357</td>\n",
+       "      <td>2.700000</td>\n",
+       "      <td>7.097912</td>\n",
+       "      <td>-1.089317</td>\n",
+       "      <td>6.283401</td>\n",
+       "      <td>7.297852</td>\n",
+       "      <td>15.530868</td>\n",
+       "      <td>84.960526</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.399548</td>\n",
+       "      <td>8.318907</td>\n",
+       "      <td>7.947100</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>55.816</td>\n",
+       "      <td>13.142960</td>\n",
+       "      <td>19.011381</td>\n",
+       "      <td>3.416876</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>Moderate Growth</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      adj_NNI_g     adj_NNI_c  adj_savings_fix_cap_GNI  adj_savings_edu_GNI  \\\n",
+       "year                                                                          \n",
+       "1979  11.978544  2.476830e+11                 8.055168             2.600000   \n",
+       "1980  -2.572689  2.413109e+11                 8.393346             2.600000   \n",
+       "1981   1.626264  2.452352e+11                 8.819348             3.051058   \n",
+       "1982  11.562099  2.735896e+11                 8.419293             3.153437   \n",
+       "1983   1.851968  2.786564e+11                 8.784357             2.700000   \n",
+       "\n",
+       "      adj_NNS_GNI  curr_acc_bal  ex_imp_gdp  ex_imp_growth  ex_debt_shocks  \\\n",
+       "year                                                                         \n",
+       "1979     6.418183     -0.958069    6.139551       5.237330       11.096107   \n",
+       "1980     7.373027     -1.394549    5.936027      -0.816934       11.615484   \n",
+       "1981     7.043158     -1.257273    5.983300       6.020508       13.467614   \n",
+       "1982     7.024774     -0.887438    5.837629      -0.914918       14.101651   \n",
+       "1983     7.097912     -1.089317    6.283401       7.297852       15.530868   \n",
+       "\n",
+       "      final_consump_exp_gdp  ...        cpi  inflation  real_interest_rate  \\\n",
+       "year                         ...                                             \n",
+       "1979              87.498021  ...   9.737409  11.346073            4.476508   \n",
+       "1980              85.768606  ...  11.014232  13.112547            5.118237   \n",
+       "1981              85.319441  ...  11.883336   7.890743            7.774707   \n",
+       "1982              85.635851  ...  13.293660  11.868081            7.320987   \n",
+       "1983              84.960526  ...  14.399548   8.318907            7.947100   \n",
+       "\n",
+       "      lending_interest_rate  life_exp_birth  expense_gdp  interest_payments  \\\n",
+       "year                                                                          \n",
+       "1979                   16.5          53.611    11.702478          13.780033   \n",
+       "1980                   16.5          54.175    11.376034          14.073244   \n",
+       "1981                   16.5          54.732    11.959873          15.563031   \n",
+       "1982                   16.5          55.281    12.077793          17.460567   \n",
+       "1983                   16.5          55.816    13.142960          19.011381   \n",
+       "\n",
+       "      military expenditure  year            labels  \n",
+       "year                                                \n",
+       "1979              3.133781  1979       High Growth  \n",
+       "1980              3.186248  1980       High Growth  \n",
+       "1981              3.345118  1981   Moderate Growth  \n",
+       "1982              3.323069  1982  Very High Growth  \n",
+       "1983              3.416876  1983   Moderate Growth  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins = [0, 2, 5, 7, float('inf')]\n",
+    "labels = ['Low Growth', 'Moderate Growth', 'High Growth', 'Very High Growth']\n",
+    "df['labels'] = pd.cut(df['gdp_growth'], bins=bins, labels=labels)\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just like India, this was done for all the countries in the same manner, which can be accessed using the code file. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sources "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://policycommons.net/artifacts/1412671/best-gdp-growth-in-a-year-still-not-good-enough/2026934/\n",
+    "\n",
+    "\n",
+    "https://ideas.repec.org/p/fip/fednsr/94635.html\n",
+    "\n",
+    "https://www.sciencedirect.com/science/article/pii/S0378437116309475?casa_token=m-i7E8n52w4AAAAA:QNYOYUv0zCTcAhLbPZ5ax3wg8dWBjSmwO-OBVa4xjSOOjX1yQ4Ydcw9IFls40ZPvsJodYTtzBpc\n",
+    "\n",
+    "https://corporatefinanceinstitute.com/resources/economics/economic-growth-rate/"
+   ]
   }
  ],
  "metadata": {
