--- a/dsan-website/5000-website/codes/working_code/roughcode.ipynb
+++ b/dsan-website/5000-website/codes/working_code/roughcode.ipynb
@@ -95,11 +95,7 @@
     "china=pd.read_csv(\"/Users/sheebamoghal/Downloads/china.csv\")\n",
     "brazil=pd.read_csv(\"/Users/sheebamoghal/Downloads/brazil.csv\")\n",
     "southafrica=pd.read_csv(\"/Users/sheebamoghal/Downloads/southafrica.csv\")\n",
-    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])\n",
-    "\n",
-    "pd.save\n",
-    "\n",
-    "\n"
+    "stacked_df = pd.concat([india, russia, china, brazil, southafrica])"
    ]
   },
   {
